--- a/views/index.erb
+++ b/views/index.erb
@@ -64,16 +64,24 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container-fluid">
         <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-8 blog-main">
+        <div class="row ">
+          <div class="col-md-2">
+          </div> 
+          <div class="col-md-7 blog-main">
             <div class="blog-post">
-              <h2 class="blog-post-title">Sample blog post</h2>
-              <p class="blog-post-meta"> <%= Date.today %> <a href="#"><%= @test %></a></p>
-              <%= @md %>
+              <div class="card">
+                <div class="card-header"> 
+                  <h2 class="blog-post-title"><%= @title %></h2>
+                  <p class="blog-post-meta"><%= @data %> に更新<a href="#"><%= @test %></a></p>
+                </div>
+                <div class="card-body">
+                  <%= @md %>
+                </div>
+              </div>
             </div><!-- /.blog-post -->
-
+            
             <h3 class="pb-3 mb-4 font-italic border-bottom"></h3>
             <nav class="blog-pagination">
               <a class="btn btn-outline-primary" href="#">Older</a>
@@ -81,7 +89,7 @@
             </nav>
           </div><!-- /.blog-main -->
 
-          <aside class="col-md-4 blog-sidebar">
+          <aside class="col-md-3 blog-sidebar">
             <div class="p-3 mb-3 bg-light rounded">
               <img src="image/erio.jpg" alt="..." class="rounded-circle" width="60" height="60">
               <a href="https://twitter.com/Gen_Arch"><h4 class="font-italic">Gen@Gen_Arch</h4></a>
