create page add

--- a/views/create.erb
+++ b/views/create.erb
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="css/create.css" />
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -48,6 +49,38 @@
     </nav>
 
     <main role="main">
+        <div class="row">
+          <div class="col">
+          <br><br><br>
+          </div>
+        </div>
+      <div class="container-fluid">
+        <!-- Example row of columns -->
+        <div class="row">
+          <div class="col">
+            <form><textarea class="form-control text_lg" placeholder="Title" rows="1" id="focusedInput"></textarea></form>
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <form>
+              <textarea class="form-control mr-2" rows="30"></textarea>
+            </form>
+          </div>
+        <div class="col-6">
+              <div class="card">
+                <div class="card-header"> 
+                  <h2 class="blog-post-title">あああああ</h2>
+                  <p class="blog-post-meta">に更新<a href="#"><%= @test %></a></p>
+                </div>
+                <div class="card-body">
+                  aaa
+                </div>
+              </div>
+          </div>
+        </div><!-- /.row -->
+      </div> <!-- /container -->  
     </main>
 
     <footer class="container">
