--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -67,7 +66,9 @@
       <div class="container-fluid">
         <!-- Example row of columns -->
         <div class="row ">
-          <div class="col-md-7 blog-main">
+          <div class="col-2">
+          </div>
+          <div class="col-7 blog-main">
             <div class="blog-post">
               <div class="card">
                 <div class="card-header"> 
@@ -87,7 +88,7 @@
             </nav>
           </div><!-- /.blog-main -->
 
-          <aside class="col-md-3 blog-sidebar">
+          <aside class="col-3 blog-sidebar">
             <div class="p-3 mb-3 bg-light rounded">
               <img src="image/erio.jpg" alt="..." class="rounded-circle" width="60" height="60">
               <a href="https://twitter.com/Gen_Arch"><h4 class="font-italic">Gen@Gen_Arch</h4></a>
