markdown rouge add

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,8 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/pygments.css" />
-
+    <link rel="stylesheet" href="css/pygments.css" type="text/css" />
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
   </head>
