--- a/public/css/pygments.css
+++ b/public/css/pygments.css
@@ -42,9 +42,9 @@
 .no { color: #008080 } /* Name.Constant */
 .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
 .ni { color: #800080 } /* Name.Entity */
-.ne { color: #990000; font-weight: bold } /* Name.Exception */
-.nf { color: #990000; font-weight: bold } /* Name.Function */
-.nl { color: #990000; font-weight: bold } /* Name.Label */
+.ne { color: #4ff56b; font-weight: bold } /* Name.Exception */
+.nf { color: #4ff56b; font-weight: bold } /* Name.Function */
+.nl { color: #4ff56b; font-weight: bold } /* Name.Label */
 .nn { color: #555555 } /* Name.Namespace */
 .nt { color: #000080 } /* Name.Tag */
 .nv { color: #008080 } /* Name.Variable */
