--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,14 +1,11 @@
 doctype html
-html lang="en"
+html lang="ja"
   head
     meta charset="utf-8"
-    meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    meta name="description" content=""
-    meta name="author" content=""
-
     title Gen_BLOG
     link href="css/bootstrap.min.css" rel="stylesheet"
-    link rel="stylesheet" href="css/pygments.css" type="text/css"
+    link href="css/epoch.min.css"     rel="stylesheet"
+    link href="css/pygments.css"      rel="stylesheet" type="text/css"
 
   nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
     a.navbar-brand href="/" GEN-BLOG
@@ -40,8 +37,11 @@ html lang="en"
         h2.display-4 ～日々の備忘録～
         p Genの学んだ知識をつらつら書いてゆくサイト
     main role="main"
-      == yield
+      == yield :index
+    script src="js/jquery-3.2.1.slim.min.js"
+    script src="js/jquery-3.3.1.min.js"
+    script src="js/popper.min.js" 
     script src="js/bootstrap.min.js"
-    script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"
-    script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"
-    script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"
+    script src="js/d3.v5.js"
+    script src="js/epoch.min.js"
+    script src="js/genblog.js"
